# TechGenie

./: .gitignore  README.md  docker-compose.yml  railway.toml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2ed0e19c9743_make_resume_github_username_nullable.py  9e90628545e6_add_resumes_table.py  9effcaad2a8e_use_timezone_aware_timestamps.py  a3f1b2c4d5e6_add_missing_indexes.py  e16eea39801b_initial_tables.py
backend/app/: config.py  database.py  main.py
backend/app/api/: router.py
backend/app/api/endpoints/: analysis.py  auth.py  billing.py  compare.py  cover_letter.py  health.py  history.py  jobs.py  linkedin.py  news.py  resume.py  skill_gap.py
backend/app/middleware/: auth.py  rate_limit.py
backend/app/models/: __init__.py  analysis.py  resume.py  user.py  user_analysis.py
backend/app/schemas/: analysis.py  ats_score.py  auth.py  billing.py  compare.py  cover_letter.py  history.py  jobs.py  linkedin.py  news.py  resume.py  skill_gap.py
backend/app/services/: analysis_service.py  auth_service.py  billing_service.py  compare_service.py  cover_letter_service.py  github_service.py  groq_service.py  history_service.py  jobs_service.py  linkedin_service.py  news_service.py  resume_service.py  scoring_service.py  skill_gap_service.py
backend/app/services/job_adapters/: __init__.py  adzuna.py  base.py  hn_hiring.py  (+2 more)
backend/app/utils/: cache.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_github_service.py  test_groq_service.py  test_scoring_service.py
(+44 files in other folders)
